// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LabelToggle > should render three radio buttons 1`] = `
<div
  class="tc-label-toggle _tc-label-toggle_9c8c4f"
>
  <label
    class=""
    for="test-radio-a"
  >
    <input
      id="test-radio-a"
      name="name"
      type="radio"
      value="a"
    />
    <span>
      A
    </span>
  </label>
  <label
    class="tc-radio-selected _tc-radio-selected_9c8c4f"
    for="test-radio-b"
  >
    <input
      checked=""
      id="test-radio-b"
      name="name"
      type="radio"
      value="b"
    />
    <span>
      B
    </span>
  </label>
  <label
    class=""
    for="test-radio-c"
  >
    <input
      id="test-radio-c"
      name="name"
      type="radio"
      value="c"
    />
    <span>
      C
    </span>
  </label>
</div>
`;

exports[`LabelToggle should render three radio buttons 1`] = `
<div
  class="tc-label-toggle theme-tc-label-toggle"
>
  <label
    class=""
    for="test-radio-a"
  >
    <input
      id="test-radio-a"
      name="name"
      type="radio"
      value="a"
    />
    <span>
      A
    </span>
  </label>
  <label
    class="tc-radio-selected theme-tc-radio-selected"
    for="test-radio-b"
  >
    <input
      checked=""
      id="test-radio-b"
      name="name"
      type="radio"
      value="b"
    />
    <span>
      B
    </span>
  </label>
  <label
    class=""
    for="test-radio-c"
  >
    <input
      id="test-radio-c"
      name="name"
      type="radio"
      value="c"
    />
    <span>
      C
    </span>
  </label>
</div>
`;
